# ollama-instructor

./: .gitignore  LICENSE  README.md  Roadmap.md  ollama_test.py  pyproject.toml  requirements.txt  run_stream_test_collection.py  run_test_collection.py  test_stream.py
blog/: How to use ollama-instructor best.md  May the BaseModel be with you.md  What you can learn from prompting LLMs for your relationships.md
docs/: 1_Why ollama-instructor.md  2_Features of ollama-instructor.md  3_The concept of ollama-instructor.md  5_Best practices.md  Enhanced prompting within Pydantics BaseModel.md  Features of ollama-instructor.md  Providing examples within Pydantic model.md  README.md
examples/: async_chat_example.py  async_stream_example.py  chat_example.py  stream_example.py
examples/async/: async_operations.md
examples/images/: image_captioning.md
examples/meeting/: README.md  conversation.md  meeting.py  persons.json
examples/todos/: todos_from_chat.md
ollama_instructor/: __init__.py  base_client.py  cleaner.py  log_config.py  ollama_instructor_client.py  prompt_manager.py  validation_manager.py
src/ollama_instructor/: __init__.py  _logging.py  ollama_instructor.py
tests/: _chat_completion_with_stream.py  conftest.py  test_async_completion.py  test_async_stream.py  test_chat_completion.py  test_chat_completion_with_stream.py  test_cleaner.py  test_completion_and_stream.py  test_extract_code_block.py  test_response_handling.py  test_serialized_chat_completion.py
tests/cleaner_tests/: clean_nested_data.py
tests/llm_tests/: test_classify_article.py  test_create_character.py  test_create_person.py  test_create_todos.py
